[package]
name = "cch23-flakelolz"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["json"] }
rstest = "0.18.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
tokio = "1.28.2"
tracing = "0.1.40"
